Upgrade to Java 1.8. Address library vulnerabilities (log4j, Joda Time, etc)